test/vm/errors/parser/bad_map_key.ach
// Parser error: invalid map key (not identifier or string)
// Expected: error about expected map key

let m = {123: "value"}
